# AlphaHouse

./: .gitignore  .gitmodules  AlphaEvolveMod.f90  AlphaHouseMod.f90  AlphaStatMod.f90  AlphaSuiteMod.f90  CMakeLists.txt  Doxygen.txt  Makefile  Makefile.pFUnit  Makefile.src2mod  Makefile_old  OrderPackMod.f90  Pedigree.txt  README.md  testPed.txt  testPedUnsorted.txt
AlphaModule/: GeneralPurpose.f90  GeneralPurposeMod.f90  Pedigree.f90  PedigreeMod.f90
AlphaRoutine/Miscellaneous/: ConvertCharacterToLowerCase.f90  InitiateSeedFromFile.f90
AlphaRoutine/Miscellaneous/Level1/: ConvertCharacterToLowerCase.f90  InitiateSeedFromFile.f90  Makefile  MiscellaneousModL1.f90  MiscellaneousModL1End  MiscellaneousModL1Start
AlphaRoutine/ParameterFile/: CheckKeyWordPresence.f90  GetRequiredCommandFileInfo.f90  ReadParamPedigree.f90
AlphaRoutine/ParameterFile/Level1/: CheckKeyWordPresence.f90  GetRequiredCommandFileInfo.f90  Makefile  ParameterFileModL1.f90  ParameterFileModL1End  ParameterFileModL1Start
AlphaRoutine/ParameterFile/Level2/: Makefile  ParameterFileModL2.f90  ParameterFileModL2End  ParameterFileModL2Start  ReadParamPedigree.f90
GeneralPurpose/: GeneralPurposeMod.f90  GeneralPurposeModEnd  GeneralPurposeMod_End.f90  GeneralPurposeMod_Start.f90  Makefile
Input/src/: inputfile.f90  main.f90
Input/tests/: testInputFile.pf  testSuites.inc
IntelRNG/: IntelRNGMod.f90  IntelRNGMod_End.f90  IntelRNGMod_Start.f90  IntitialiseIntelRNG.f90  Makefile  SampleIntelBernoulliI.f90  SampleIntelGammaD.f90  SampleIntelGammaS.f90  SampleIntelGaussD.f90  SampleIntelGaussRD.f90  SampleIntelGaussRS.f90  SampleIntelGaussS.f90  SampleIntelGumbelD.f90  SampleIntelGumbelRD.f90  SampleIntelGumbelRS.f90  SampleIntelGumbelS.f90  SampleIntelMultinomialI.f90  SampleIntelPoissonI.f90  SampleIntelUniformD.f90  SampleIntelUniformI.f90  SampleIntelUniformRD.f90  SampleIntelUniformRS.f90  SampleIntelUniformS.f90  UnintitialiseIntelRNG.f90
IntelRNG/Test/: TestSampleIntelBernoulliI.pf  TestSampleIntelGammaR.pf  TestSampleIntelGaussR.pf  TestSampleIntelGumbelR.pf  TestSampleIntelMultinomialI.pf  TestSampleIntelPoissonI.pf  TestSampleIntelUniformI.pf  TestSampleIntelUniformR.pf  TestSuites.inc
Macs/: Makefile  SharedParameters.f90
Macs/src/: AlphaModule.f90  CMakeLists.txt  GenParam.f90  PedigreeTable.f90  UtilitySubroutines.f90  macs.f90  main.f90
Macs/tests/: macsTest.F90  macsTest.pf  testSuites.inc
Miscellaneous/: CountLines.f90  InitiateSeedFromFile.f90  MiscellaneousMod.f90  MiscellaneousModEnd  MiscellaneousModStart  MiscellaneousMod_End.f90  MiscellaneousMod_Start.f90
Miscellaneous/Test/: testSuites.inc
Miscellaneous/test/: testCountLines.pf  testSuites.inc
ParameterFile/: CheckKeyWordPresence.f90  GetRequiredCommandFileInfo.f90  Makefile  ParameterFileMod.f90  ParameterFileModStart  ParameterFileMod_End.f90  ParameterFileMod_Start.f90
Pedigree/: Makefile  PedigreeMod.f90  PedigreeModEnd  PedigreeModStart  PedigreeMod_End.f90  PedigreeMod_Start.f90  ReadParamPedigree.f90  ReadPedigree.f90
ThirdPartyRoutines/: ThirdPartyRoutinesMod_End.f90  ThirdPartyRoutinesMod_Start.f90
ThirdPartyRoutines/RandomNumbers/: Gasdev.f90  RandomGamma.f90
ThirdPartyRoutines/StatisticalProcedures/: MomentR8.f90  PearsnR4.f90
ThirdPartyRoutines/TPRRandomNumbers/: Gasdev.f90  Ran1.f90
ThirdPartyRoutines/TPRStatisticalProcedures/: MomentR4.f90  MomentR8.f90
_NewFolderTemplate/: Makefile  NameMod_End.f90  NameMod_Start.f90
cmake/modules/: findPFUnit.cmake
old/: Makefile  Makefile.pFUnit
old/GeneralPurpose/: GeneralPurposeMod.f90
old/Miscellaneous/: Makefile  MiscellaneousMod.f90
old/ParameterFile/: CheckKeyWordPresence.f90  ParameterFileMod.f90
old/Pedigree/: Makefile  PedigreeMod.f90
old/ThirdPartyRoutines/: Makefile  ThirdPartyRoutinesMod.f90
old/_NewFolderTemplate/: Makefile  NameMod.f90
src/: AlphaEvolveMod.f90  AlphaHouseMod.f90  AlphaSortMod.f90  AlphaStatMod.f90  CMakeLists.txt  GenotypeModule.f90  HaplotypeModule.f90  HashModule.f90  HelperSubroutines.f90  IndividualHelperModule.f90  IndividualLinkedListModule.f90  IndividualModule.f90  Input.f90  IntelRNGMod.f90  LineModule.f90  LinkedListModule.f90  PageModule.f90  PedigreeModule.f90  PedigreeTable.f90  StringModule.f90  UtilitySubroutines.f90  main.f90
src/BioComputational/: AlphaEvolveMod.f90  AlphaEvolveModule.f90  AlphaStatMod.f90  BitUtilities.f90  CoreIndexModule.f90  CoreUtils.f90  FilterModule.f90  GenotypeHelperModule.f90  GenotypeModule.f90  HaplotypeLibraryModule.f90  HaplotypeLinkedListModule.f90  HaplotypeModule.f90  IndividualHelperModule.f90  IndividualLinkedListModule.f90  IndividualModule.f90  IntelRNGMod.f90  PedigreeModule.f90  informationModule.f90
src/NotUnitTested/BioComputational/: AlphaEvolveModule.f90  GenotypeModule.f90
src/NotUnitTested/Utilities/: CompatibilityModule.f90  MPIUtilities.f90
src/Untested/: AlphaEvolveModule.f90  AlphaSortMod.f90  BitUtilities.f90  ClusteringModule.f90
src/Utilities/: AlphaHouseMod.f90  AlphaSortMod.f90  AlphaSystemMod.f90  CharacterLinkedListModule.f90  ClusteringModule.f90  CompatibilityModule.f90  ConstantModule.f90  HashModule.f90  HelperSubroutines.f90  Input.f90  IntegerLinkedListModule.f90  LegacyRandom.f90  LineModule.f90  LinkedListModule.f90  MPIUtilities.f90  OrderPackMod.f90  OrderPackModule.f90  PageModule.f90  PedigreeLinkedList.f90  PlinkHandler.f90  SortedIntegerLinkedListModule.f90  SortingModule.f90  StringModule.f90  UtilitySubroutines.f90  alphafullchrom.f90  baseSpecFileModule.f90  newGeno.f90
tests/: TestAlphaStatMod.pf  TestHashTable.pf  TestIndividual.pf  TestIndividualHelperModule.pf  TestIntelRNG.F90  TestIntelRNG.pf  TestIntelRNGMod.pf  TestLinkedList.pf  TestOrderPackModule.pf  TestPedigreeModule.pf  TestPedigreeTable.pf  TestSuites.inc  testAlphaHouseMod.pf  testAlphaSort.pf  testConvertInput.pf  testHaplotypeLinkedList.pf  testIndividualHelperModule.pf  testIndividualLinkedList.pf  testInputFile.pf  testLine.pf  testPage.pf  testPedigreeModule.pf  testString.pf  testSuites.inc  testSystemMod.pf
(+6 files in other folders)
